--- a/code/css/team.css
+++ b/code/css/team.css
@@ -24,13 +24,6 @@
     padding: 0 16px;
 }
 
-/* Clear floats */
-.container::after, .row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
 .title {
     color: grey;
 }
